logs/products.calendarlistingportlet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/patches'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/prefs'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/i18n'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/profiles'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/skins'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/skins/CalendarListingPortlet'...
Compiling './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/skins/CalendarListingPortlet/get_calendar_listing_events.py'...
***   File "./lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/skins/CalendarListingPortlet/get_calendar_listing_events.py", line 10
    return objects
                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/_darcs/pristine/tests'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/i18n'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/profiles'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/skins'...
Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/skins/CalendarListingPortlet'...
Compiling './lib/python3.5/site-packages/Products/CalendarListingPortlet/skins/CalendarListingPortlet/get_calendar_listing_events.py'...
***   File "./lib/python3.5/site-packages/Products/CalendarListingPortlet/skins/CalendarListingPortlet/get_calendar_listing_events.py", line 10
    return objects
                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/CalendarListingPortlet/tests'...
Listing './lib/python3.5/site-packages/Products.CalendarListingPortlet-1.0.2b0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
